fix wrap

--- a/docs/scss/base/_base.scss
+++ b/docs/scss/base/_base.scss
@@ -98,6 +98,5 @@ button:hover {
 
 
 #name {
-    white-space: nowrap;
-    font-size: 6vw;
+    font-size: 8vw; /* Tamaño mínimo, tamaño relativo, tamaño máximo */
 }
